teacher has classservice